ui and cron job and db dump

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -118,6 +118,13 @@
             </span>
           </div>
         </div>
+        <!-- Added Run Analysis button -->
+        <button class="btn-run-analysis" id="runAnalysisBtn" style="display: block;">
+          <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="16" height="16">
+            <path d="M5 12h14M12 5l7 7-7 7"/>
+          </svg>
+          Run Analysis
+        </button>
       </div>
       
       <div class="analysis-content" id="analysisContent">
