--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,14 +15,19 @@
   <header class="header">
     <div class="header-left">
       <div class="logo">
+        <!-- Updated logo to represent manufacturing intelligence AI with gear and brain icon -->
         <div class="logo-icon">
           <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-            <path d="M12 2L2 7l10 5 10-5-10-5z"/>
-            <path d="M2 17l10 5 10-5"/>
-            <path d="M2 12l10 5 10-5"/>
+            <!-- Brain/AI element -->
+            <path d="M9.5 2C8 2 7 3 7 4.5S8 7 9.5 7c.5 0 1-.5 1-1 0 1 .5 2 1.5 2s2-.5 2-1.5S13 4 11.5 4c-.5 0-1 .5-1 1 0-1-.5-2-1-2z"/>
+            <ellipse cx="12" cy="17" rx="7" ry="5"/>
+            <!-- Manufacturing gear elements -->
+            <circle cx="12" cy="17" r="3"/>
+            <path d="M12 14v-2M12 20v2M9 17H7M17 17h-2"/>
+            <path d="M10 15l-1.5-1.5M14 19l1.5 1.5M14 15l1.5-1.5M10 19l-1.5 1.5"/>
           </svg>
         </div>
-        <span class="logo-text">AgentOS</span>
+        <span class="logo-text">SignalForge AI</span>
       </div>
     </div>
     
